# infokiosk-tauri

./: build-windows-FIXED.yml
.github/workflows/: build-windows.yml
src-tauri/: Cargo.toml
src-tauri/kiosk_sync/src/: sync.rs
